--- a/index.html
+++ b/index.html
@@ -4,57 +4,80 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Studio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="studio">Studio</a></li>
-          <li><a href="portfolio">Portfolio</a></li>
-          <li><a href="contacts">Contacts</a></li>
+    <header class="main-header">
+      <nav class="navigation">
+        <a class="logotype link" href="./index.html">
+          <p class="logo-first">Web <span class="logo-second">Studio</span></p>
+        </a>
+        <ul class="menu list">
+          <li class="menu-item">
+            <a class="menu-link link" href="./index.html">Studio</a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link link" href="contacts">Contacts</a>
+          </li>
         </ul>
       </nav>
-      <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <address class="contacts-info">
+        <ul class="contact-menu list">
+          <li class="contact-menu-item">
+            <a class="e-mail link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="contact-menu-item">
+            <a class="telephon link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button class="order-button" type="button">Order Service</button>
       </section>
       <section>
-        <h2>Our Advantages</h2>
-        <ul>
+        <h2 class="section-title">Our Advantages</h2>
+        <ul class="list">
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="item-title">Strategy</h3>
+            <p class="description">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="item-title">Punctuality</h3>
+            <p class="description">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="item-title">Diligence</h3>
+            <p class="description">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="item-title">Technologies</h3>
+            <p class="description">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -62,8 +85,8 @@
         </ul>
       </section>
       <section>
-        <h2>What are we doing</h2>
-        <ul>
+        <h2 class="section-title">What are we doing</h2>
+        <ul class="link">
           <li>
             <img
               src="./images/galery/monitor.jpg"
@@ -91,17 +114,18 @@
         </ul>
       </section>
       <section>
-        <h2>Our Team</h2>
-        <ul>
+        <h2 class="section-title">Our Team</h2>
+        <ul class="list">
           <li>
             <img
-              src="./images/team/mark-guerrero.jpg"
+              class="team-list-item"
+              src="./images/team/ma"
               alt="Mark Guerrero"
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="item-title">Mark Guerrero</h3>
+            <p class="description">Product Designer</p>
           </li>
           <li>
             <img
@@ -110,8 +134,8 @@
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="item-title">Tom Ford</h3>
+            <p class="description">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -120,8 +144,8 @@
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="item-title">Camila Garcia</h3>
+            <p class="description">Marketing</p>
           </li>
           <li>
             <img
@@ -130,15 +154,19 @@
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="item-title">Daniel Wilson</h3>
+            <p class="description">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="underside">
+      <a class="link" href="./index.html"
+        ><p class="logo-first">
+          Web <span class="logo-second-underside">Studio</span>
+        </p></a
+      >
+      <p class="underside-desc">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
