--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="main-header">
       <nav class="navigation">
         <a class="logotype link" href="./index.html">
-          <p class="logo-first">Web <span class="logo-second">Studio</span></p>
+          Web<span class="logo-second">Studio</span>
         </a>
         <ul class="menu list">
           <li class="menu-item">
@@ -52,7 +52,7 @@
         <button class="order-button" type="button">Order Service</button>
       </section>
       <section>
-        <h2 class="section-title">Our Advantages</h2>
+        <h2 class="section-title" hidden>Our Advantages</h2>
         <ul class="list">
           <li>
             <h3 class="item-title">Strategy</h3>
@@ -86,7 +86,7 @@
       </section>
       <section>
         <h2 class="section-title">What are we doing</h2>
-        <ul class="link">
+        <ul class="list">
           <li>
             <img
               src="./images/galery/monitor.jpg"
@@ -113,10 +113,10 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="our-team">
         <h2 class="section-title">Our Team</h2>
         <ul class="list">
-          <li>
+          <li class="our-team-item">
             <img
               class="team-list-item"
               src="./images/team/ma"
@@ -127,7 +127,7 @@
             <h3 class="item-title">Mark Guerrero</h3>
             <p class="description">Product Designer</p>
           </li>
-          <li>
+          <li class="our-team-item">
             <img
               src="./images/team/tom-ford.jpg"
               alt="Tom Ford"
@@ -137,7 +137,7 @@
             <h3 class="item-title">Tom Ford</h3>
             <p class="description">Frontend Developer</p>
           </li>
-          <li>
+          <li class="our-team-item">
             <img
               src="./images/team/camila-garcia.jpg"
               alt="Camila Garcia"
@@ -147,7 +147,7 @@
             <h3 class="item-title">Camila Garcia</h3>
             <p class="description">Marketing</p>
           </li>
-          <li>
+          <li class="our-team-item">
             <img
               src="./images/team/daniel-wilson.jpg"
               alt="Daniel Wilson"
@@ -161,11 +161,9 @@
       </section>
     </main>
     <footer class="underside">
-      <a class="link" href="./index.html"
-        ><p class="logo-first">
-          Web <span class="logo-second-underside">Studio</span>
-        </p></a
-      >
+      <a class="logotype link" href="./index.html"
+        >Web<span class="logo-second-underside">Studio</span>
+      </a>
       <p class="underside-desc">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
