--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
     <header class="main-header">
       <nav class="navigation">
         <a class="logotype link" href="./index.html">
-          <p class="logo-first">Web <span class="logo-second">Studio</span></p>
+          Web<span class="logo-second">Studio</span>
         </a>
         <ul class="menu list">
           <li class="menu-item">
@@ -48,12 +48,15 @@
     </header>
     <main>
       <section>
+        <h2 hidden>Our Works</h2>
         <ul class="list">
-          <li><button class="filtr-button" type="button">All</button></li>
-          <li><button class="filtr-button" type="button">Web Site</button></li>
-          <li><button class="filtr-button" type="button">App</button></li>
-          <li><button class="filtr-button" type="button">Design</button></li>
-          <li><button class="filtr-button" type="button">Marketing</button></li>
+          <li><button class="filter-button" type="button">All</button></li>
+          <li><button class="filter-button" type="button">Web Site</button></li>
+          <li><button class="filter-button" type="button">App</button></li>
+          <li><button class="filter-button" type="button">Design</button></li>
+          <li>
+            <button class="filter-button" type="button">Marketing</button>
+          </li>
         </ul>
       </section>
       <ul class="list">
@@ -150,11 +153,9 @@
       </ul>
     </main>
     <footer class="underside">
-      <a class="link" href="./index.html"
-        ><p class="logo-first">
-          Web <span class="logo-second-underside">Studio</span>
-        </p></a
-      >
+      <a class="logotype link" href="./index.html"
+        >Web<span class="logo-second-underside">Studio</span>
+      </a>
       <p class="underside-desc">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
