--- a/index.html
+++ b/index.html
@@ -27,21 +27,19 @@
             <a class="menu-link link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="menu-item">
-            <a class="menu-link link" href="contacts">Contacts</a>
+            <a class="menu-link link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
       <address class="contacts-info">
         <ul class="contact-menu list">
           <li class="contact-menu-item">
-            <a class="e-mail link" href="mailto:info@devstudio.com"
+            <a class="link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="contact-menu-item">
-            <a class="telephon link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
+            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
