--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
             <a class="menu-link link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="menu-item">
-            <a class="menu-link link" href="contacts">Contacts</a>
+            <a class="menu-link link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -48,7 +48,7 @@
     </header>
     <main>
       <section>
-        <h2 hidden>Our Works</h2>
+        <h2 hidden>/Button-filter</h2>
         <ul class="list">
           <li><button class="filter-button" type="button">All</button></li>
           <li><button class="filter-button" type="button">Web Site</button></li>
@@ -59,98 +59,110 @@
           </li>
         </ul>
       </section>
-      <ul class="list">
-        <li>
-          <img
-            src="./images/portfolio/bank-app.jpg"
-            alt="Banking App Interface Concept"
-            width="360"
-            height="300"
-          />
-          <h3 class="item-title">Banking App Interface Concept</h3>
-          <p class="description">App</p>
-        </li>
-        <li>
-          <img
-            src="./images/portfolio/qr-kod.jpg"
-            alt="Cashless Payment"
-            width="360"
-            height="300"
-          />
-          <h3 class="item-title">Cashless Payment</h3>
-          <p class="description">Marketing</p>
-        </li>
-        <li>
-          <img
-            src="./images/portfolio/laptop.jpg"
-            alt="Meditation App"
-            width="360"
-            height="300"
-          />
-          <h3 class="item-title">Meditation App</h3>
-          <p class="description">App</p>
-        </li>
-        <li>
-          <img
-            src="./images/portfolio/car-cab.jpg"
-            alt="Taxi Service"
-            width="360"
-            height="300"
-          />
-          <h3 class="item-title">Taxi Service</h3>
-          <p class="description">Marketing</p>
-        </li>
-        <li>
-          <img
-            src="./images/portfolio/wallpapers.jpg"
-            alt="Screen Illustrations"
-            width="360"
-            height="300"
-          />
-          <h3 class="item-title">Screen Illustrations</h3>
-          <p class="description">Design</p>
-        </li>
-        <li>
-          <img
-            src="./images/portfolio/girl.jpg"
-            alt="Girl"
-            width="360"
-            height="300"
-          />
-          <h3 class="item-title">Online Courses</h3>
-          <p class="description">Marketing</p>
-        </li>
-        <li>
-          <img
-            src="./images/portfolio/instagram.jpg"
-            alt="Instagram Stories"
-            width="360"
-            height="300"
-          />
-          <h3 class="item-title">Instagram Stories Concept</h3>
-          <p class="description">Design</p>
-        </li>
-        <li>
-          <img
-            src="./images/portfolio/bag.jpg"
-            alt="Bag"
-            width="360"
-            height="300"
-          />
-          <h3 class="item-title">Organic Food</h3>
-          <p class="description">Web Site</p>
-        </li>
-        <li>
-          <img
-            src="./images/portfolio/coffe.jpg"
-            alt="coffee"
-            width="360"
-            height="300"
-          />
-          <h3 class="item-title">Fresh Coffee</h3>
-          <p class="description">Web Site</p>
-        </li>
-      </ul>
+      <section>
+        <h2 hidden>Our Works</h2>
+        <ul class="list">
+          <li>
+            <a class="link" href="images/portfolio/bank-app.jpg">
+              <img
+                src="./images/portfolio/bank-app.jpg"
+                alt="Banking App Interface Concept"
+                width="360"
+                height="300"
+            /></a>
+            <h3 class="item-title">Banking App Interface Concept</h3>
+            <p class="description">App</p>
+          </li>
+          <li>
+            <a class="link" href="./images/portfolio/qr-kod.jpg">
+              <img
+                src="./images/portfolio/qr-kod.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+            /></a>
+            <h3 class="item-title">Cashless Payment</h3>
+            <p class="description">Marketing</p>
+          </li>
+          <li>
+            <a class="link" href="./images/portfolio/laptop.jpg">
+              <img
+                src="./images/portfolio/laptop.jpg"
+                alt="Meditation App"
+                width="360"
+                height="300"
+            /></a>
+            <h3 class="item-title">Meditation App</h3>
+            <p class="description">App</p>
+          </li>
+          <li>
+            <a class="link" href="./images/portfolio/car-cab.jpg">
+              <img
+                src="./images/portfolio/car-cab.jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300"
+            /></a>
+            <h3 class="item-title">Taxi Service</h3>
+            <p class="description">Marketing</p>
+          </li>
+          <li>
+            <a class="link" href="./images/portfolio/wallpapers.jpg">
+              <img
+                src="./images/portfolio/wallpapers.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+            /></a>
+            <h3 class="item-title">Screen Illustrations</h3>
+            <p class="description">Design</p>
+          </li>
+          <li>
+            <a class="link" href="./images/portfolio/girl.jpg">
+              <img
+                src="./images/portfolio/girl.jpg"
+                alt="Girl"
+                width="360"
+                height="300"
+            /></a>
+            <h3 class="item-title">Online Courses</h3>
+            <p class="description">Marketing</p>
+          </li>
+          <li>
+            <a class="link" href="./images/portfolio/instagram.jpg">
+              <img
+                src="./images/portfolio/instagram.jpg"
+                alt="Instagram Stories"
+                width="360"
+                height="300"
+            /></a>
+            <h3 class="item-title">Instagram Stories Concept</h3>
+            <p class="description">Design</p>
+          </li>
+          <li>
+            <a href="./images/portfolio/bag.jpg">
+              <img
+                src="./images/portfolio/bag.jpg"
+                alt="Bag"
+                width="360"
+                height="300"
+            /></a>
+            <h3 class="item-title">Organic Food</h3>
+            <p class="description">Web Site</p>
+          </li>
+          <li>
+            <a href="./images/portfolio/coffe.jpg">
+              <img
+                src="./images/portfolio/coffe.jpg"
+                alt="coffee"
+                width="360"
+                height="300"
+            /></a>
+            <h3 class="item-title">Fresh Coffee</h3>
+            <p class="description">Web Site</p>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer class="underside">
       <a class="logotype link" href="./index.html"
