--- a/portfolio.html
+++ b/portfolio.html
@@ -66,9 +66,10 @@
                 alt="Banking App Interface Concept"
                 width="360"
                 height="300"
-            /></a>
-            <h2 class="item-title">Banking App Interface Concept</h2>
-            <p class="description">App</p>
+              />
+              <h2 class="item-title">Banking App Interface Concept</h2>
+              <p class="description">App</p></a
+            >
           </li>
           <li>
             <a class="link" href="./images/portfolio/qr-kod.jpg">
@@ -77,9 +78,10 @@
                 alt="Cashless Payment"
                 width="360"
                 height="300"
-            /></a>
-            <h2 class="item-title">Cashless Payment</h2>
-            <p class="description">Marketing</p>
+              />
+              <h2 class="item-title">Cashless Payment</h2>
+              <p class="description">Marketing</p></a
+            >
           </li>
           <li>
             <a class="link" href="./images/portfolio/laptop.jpg">
@@ -88,9 +90,10 @@
                 alt="Meditation App"
                 width="360"
                 height="300"
-            /></a>
-            <h2 class="item-title">Meditation App</h2>
-            <p class="description">App</p>
+              />
+              <h2 class="item-title">Meditation App</h2>
+              <p class="description">App</p></a
+            >
           </li>
           <li>
             <a class="link" href="./images/portfolio/car-cab.jpg">
@@ -99,9 +102,10 @@
                 alt="Taxi Service"
                 width="360"
                 height="300"
-            /></a>
-            <h2 class="item-title">Taxi Service</h2>
-            <p class="description">Marketing</p>
+              />
+              <h2 class="item-title">Taxi Service</h2>
+              <p class="description">Marketing</p></a
+            >
           </li>
           <li>
             <a class="link" href="./images/portfolio/wallpapers.jpg">
@@ -110,9 +114,10 @@
                 alt="Screen Illustrations"
                 width="360"
                 height="300"
-            /></a>
-            <h2 class="item-title">Screen Illustrations</h2>
-            <p class="description">Design</p>
+              />
+              <h2 class="item-title">Screen Illustrations</h2>
+              <p class="description">Design</p></a
+            >
           </li>
           <li>
             <a class="link" href="./images/portfolio/girl.jpg">
@@ -121,9 +126,10 @@
                 alt="Girl"
                 width="360"
                 height="300"
-            /></a>
-            <h2 class="item-title">Online Courses</h2>
-            <p class="description">Marketing</p>
+              />
+              <h2 class="item-title">Online Courses</h2>
+              <p class="description">Marketing</p></a
+            >
           </li>
           <li>
             <a class="link" href="./images/portfolio/instagram.jpg">
@@ -132,9 +138,10 @@
                 alt="Instagram Stories"
                 width="360"
                 height="300"
-            /></a>
-            <h2 class="item-title">Instagram Stories Concept</h2>
-            <p class="description">Design</p>
+              />
+              <h2 class="item-title">Instagram Stories Concept</h2>
+              <p class="description">Design</p></a
+            >
           </li>
           <li>
             <a href="./images/portfolio/bag.jpg">
@@ -143,9 +150,10 @@
                 alt="Bag"
                 width="360"
                 height="300"
-            /></a>
-            <h2 class="item-title">Organic Food</h2>
-            <p class="description">Web Site</p>
+              />
+              <h2 class="item-title">Organic Food</h2>
+              <p class="description">Web Site</p></a
+            >
           </li>
           <li>
             <a href="./images/portfolio/coffe.jpg">
@@ -154,9 +162,10 @@
                 alt="coffee"
                 width="360"
                 height="300"
-            /></a>
-            <h2 class="item-title">Fresh Coffee</h2>
-            <p class="description">Web Site</p>
+              />
+              <h2 class="item-title">Fresh Coffee</h2>
+              <p class="description">Web Site</p></a
+            >
           </li>
         </ul>
       </section>
