--- a/portfolio.html
+++ b/portfolio.html
@@ -31,15 +31,15 @@
           </li>
         </ul>
       </nav>
-      <address class="contacts-info">
-        <ul class="contact-menu list">
-          <li class="contact-menu-item">
-            <a class="e-mail link" href="mailto:info@devstudio.com"
+      <address class="menu-contacts">
+        <ul class="list">
+          <li>
+            <a class="menu-contacts-item link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li class="contact-menu-item">
-            <a class="telephon link" href="tel:+110001111111"
+          <li>
+            <a class="menu-contacts-item link" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -144,7 +144,7 @@
             >
           </li>
           <li>
-            <a href="./images/portfolio/bag.jpg">
+            <a class="link" href="./images/portfolio/bag.jpg">
               <img
                 src="./images/portfolio/bag.jpg"
                 alt="Bag"
@@ -156,7 +156,7 @@
             >
           </li>
           <li>
-            <a href="./images/portfolio/coffe.jpg">
+            <a class="link" href="./images/portfolio/coffe.jpg">
               <img
                 src="./images/portfolio/coffe.jpg"
                 alt="coffee"
