--- a/index.html
+++ b/index.html
@@ -31,15 +31,17 @@
           </li>
         </ul>
       </nav>
-      <address class="contacts-info">
-        <ul class="contact-menu list">
-          <li class="contact-menu-item">
-            <a class="link" href="mailto:info@devstudio.com"
+      <address class="menu-contacts">
+        <ul class="list">
+          <li>
+            <a class="menu-contacts-item link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li class="contact-menu-item">
-            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          <li>
+            <a class="menu-contacts-item link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
